--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,6 @@ a {
 @media (max-width: 1000px) {
     .header-text {
         padding: 30vh 20px;
-
     }
 }
 
@@ -71,7 +70,7 @@ a {
 
 .bio-text {
 	float: left;
-	width: 400px;
+	max-width: 400px;
 }
 
 .contact {
