--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,9 @@ h1 {
 	margin: 0px auto 0px auto;
 	font-size: 64px;
 	font-weight: 400;
-	line-height: 64px;
+	line-height: normal;
 }
+
 
 h2 {
 	font-size: 32px;
@@ -14,6 +15,18 @@ h2 {
 p {
 	font-size: 24px;
 	margin: 5px;
+}
+
+@media (max-width: 1000px) {
+    h1 {
+        font-size: 48px;
+    }
+    h2 {
+    	font-size: 24px;
+    }
+    p {
+    	font-size: 18px;
+    }
 }
 
 body {
@@ -28,7 +41,7 @@ a {
 }
 
 .subtitle {
-	line-height: 32px;
+	line-height: normal;
 	margin-bottom: 40px;
 }
 
@@ -38,19 +51,19 @@ a {
 	max-width: 90%;
 }
 
+@media (max-width: 1000px) {
+    .pic {
+        margin-right: 0;
+    }
+}
+
+
 .header {
 	background-image: url("sherrerd.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	height: 90vh;
 }
-
-@media (max-width: 1000px) {
-    .header {
-        background-size: 1500px auto;
-    }
-}
-
 
 .header-text {
 	padding: 30vh 0 0 100px;
@@ -68,6 +81,12 @@ a {
 	padding: 5vh 0 100px 100px;
 }
 
+@media (max-width: 1000px) {
+	.bio {
+		padding: 5vh 20px 50px;
+	}
+}
+
 .bio-text {
 	float: left;
 	max-width: 400px;
@@ -76,6 +95,12 @@ a {
 .contact {
 	background: #557181;
 	padding: 100px 0 0 100px;
+}
+
+@media (max-width: 1000px) {
+	.contact {
+		padding: 50px 20px 0;
+	}
 }
 
 .copyright {
