--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,25 @@
 body {
 	font-family: "Barlow", sans-serif;
-	line-height: 1.6em;
+	line-height: 2rem;
 	font-size: 20px;
 	background: #F5F5F5;
+}
+
+@media (max-width: 550px) {
+	h1 {
+		font-size: 32px;
+	}
+	.subtitle {
+		font-size: 28px;
+	}
+}
+
+h1 {
+	line-height: 3rem;
+}
+
+.subtitle {
+	color:#7D7D7D;
 }
 
 h1, h2 {
