--- a/styles.css
+++ b/styles.css
@@ -42,9 +42,10 @@ hr {
 
 
 .tagline {
-	max-width: 45rem;
+	/* max-width: 45rem; */
+	text-align: center;
 	margin: 10px auto;
-	font-size: 1.2em;
+	font-size: 1.1em;
 }
 
 .pic {
